# WRLD-capstone

./: .gitignore  .gitmodules  README.md  Ramblings.md  buoy.proto  deploy  jlkhjk  sync_pi.sh  targets.yaml
base/: BuoyNode.cpp  BuoyNode.h  CMakeLists.txt  Config.cpp  GStreamer_comp.cpp  VideoComposite.cpp  VideoComposite.h  distort.frag  gst_main.cpp  main.c  main.cpp  prototest.cpp
base/src/: BuoyNode.cpp  BuoyNode.h  CMakeLists.txt  Config.cpp  Config.h  MathHelpers.cpp  MathHelpers.h  VideoComposite.cpp  VideoComposite.h  distort.frag  main.cpp  note_to_self.txt  passthrough.frag  prototest.cpp  warp.frag  warp_black_border.frag  warp_clamp.frag
buoy/: CMakeLists.txt  deploy  opencv_test.cpp  targets.yaml
buoy/src/: BMI323Driver.cpp  BMI323Driver.h  BNO055.cpp  BNO055.h  BNO055_registers.h  CMakeLists.txt  Config.cpp  Config.h  I2CTransport.cpp  I2CTransport.h  IMU.h  IMUHelpers.cpp  IMUHelpers.h  IMUProtoSender.cpp  IMUProtoSender.h  SPITransport.cpp  SPITransport.h  VideoStreamer.cpp  VideoStreamer.h  main.cpp  test_main.cpp
camera_calib/: CMakeLists.txt  camera_calibration.cpp
vid_stab/: live_stabilize.py
vid_stab/cpp/: CMakeLists.txt
vid_stab/cpp/src/: main.cpp  serial_imu.cpp  serial_imu.hpp  stab_math.hpp
vid_stab/cpp_vid_stab/: CMakeLists.txt  main.cpp
vid_stab/imu_code/: imu_code.ino
vid_stab/python/: gst_warp_imu.py  gst_warp_imu_sbs_overlay.py  gst_warp_imu_timing_prot.py  live_stabilize.py
vid_stab/shaders/: warp.frag
